--- a/Android/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Android/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,17 +9,32 @@
         android:id="@+id/nav_home"
         android:name="com.vgsg.myapplication.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_nav_home_to_nav_recom"
+            app:destination="@id/nav_recom" />
+        <action
+            android:id="@+id/action_nav_home_to_nav_met_pago"
+            app:destination="@id/nav_met_pago" />
+    </fragment>
 
     <fragment
-        android:id="@+id/nav_gallery"
+        android:id="@+id/nav_met_pago"
         android:name="com.vgsg.myapplication.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:label="@string/menu_met_pago"
+        tools:layout="@layout/fragment_gallery">
+        <action
+            android:id="@+id/action_nav_met_pago_to_nav_home"
+            app:destination="@id/nav_home" />
+    </fragment>
 
     <fragment
-        android:id="@+id/nav_slideshow"
+        android:id="@+id/nav_recom"
         android:name="com.vgsg.myapplication.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:label="@string/menu_reco"
+        tools:layout="@layout/fragment_slideshow">
+        <action
+            android:id="@+id/action_nav_recom_to_nav_home"
+            app:destination="@id/nav_home" />
+    </fragment>
 </navigation>
