--- a/Android/app/src/main/res/layout/app_bar_main.xml
+++ b/Android/app/src/main/res/layout/app_bar_main.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
+            app:navigationIcon="@mipmap/nzav"
             app:popupTheme="@style/Theme.LinceEats.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -29,6 +30,6 @@
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:srcCompat="@mipmap/carrito" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
