--- a/Android/app/src/main/res/layout/nav_header_main.xml
+++ b/Android/app/src/main/res/layout/nav_header_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
+    android:background="#000000"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -13,6 +13,7 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
+        android:layout_gravity="center"
         android:id="@+id/imageView"
         android:layout_width="70dp"
         android:layout_height="76dp"
@@ -23,6 +24,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="15dp"
+        android:layout_gravity="center"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="¡Buenas Tardes Juan Manuel!"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
@@ -31,5 +34,6 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="13dp"
         android:text="¿Qué vamos a comer el día de hoy?" />
 </LinearLayout>
