--- a/Android/app/src/main/res/layout/nav_header_main.xml
+++ b/Android/app/src/main/res/layout/nav_header_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/xd"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="#000000"
@@ -13,27 +14,28 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:layout_gravity="center"
         android:id="@+id/imageView"
         android:layout_width="70dp"
         android:layout_height="76dp"
+        android:layout_gravity="center"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@mipmap/user" />
 
     <TextView
+        android:id="@+id/lblsaludo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="15dp"
         android:layout_gravity="center"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="¡Buenas Tardes Juan Manuel!"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="15dp" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/lblcomida"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="13dp"
-        android:text="¿Qué vamos a comer el día de hoy?" />
+        android:text="¿Qué vamos a comer el día de hoy?"
+        android:textSize="13dp" />
 </LinearLayout>
