--- a/Android/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Android/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.vgsg.myapplication.ui.home.HomeFragment"
+        android:name="com.vgsg.myapplication.ui.home.HomeF"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" >
         <action
