--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="purple_200">#FD8F3A</color>
     <color name="purple_500">#EE5F00</color>
     <color name="purple_700">#FD8F3A</color>
-    <color name="teal_200">#FFFFFF</color>
+    <color name="teal_200">#D8FD8F3A</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
