--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#007D32</color>
-    <color name="purple_500">#EE5F00</color>
+    <color name="purple_500">#007D32</color>
     <color name="purple_700">#007D32</color>
     <color name="teal_200">#F8DF00</color>
     <color name="teal_700">#FF018786</color>
