--- a/Android/app/src/main/res/layout/detalles_producto.xml
+++ b/Android/app/src/main/res/layout/detalles_producto.xml
@@ -35,49 +35,63 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblDeT" />
 
-    <TextView
-        android:id="@+id/lblmenos"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="10dp"
-        android:text="-"
-        android:textSize="50dp"
-        app:layout_constraintEnd_toStartOf="@+id/lblcanti"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblDeD" />
-
-    <TextView
-        android:id="@+id/lblcanti"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="76dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toStartOf="@+id/lblmas"
-        app:layout_constraintTop_toBottomOf="@+id/lblDeD" />
-
-    <TextView
-        android:id="@+id/lblmas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="80dp"
-        android:text="+"
-        android:textSize="50dp"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblDeD" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lblDeD">
+
+        <Space
+            android:layout_width="80dp"
+            android:layout_height="0dp"/>
+
+        <TextView
+            android:id="@+id/lblmenos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-"
+            android:layout_gravity="center"
+            android:textSize="50dp" />
+
+        <Space
+            android:layout_width="90dp"
+            android:layout_height="0dp"/>
+
+        <TextView
+            android:id="@+id/lblcanti"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            android:text="TextView" />
+
+        <Space
+            android:layout_width="80dp"
+            android:layout_height="0dp"/>
+
+        <TextView
+            android:id="@+id/lblmas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="end"
+            android:text="+"
+            android:textSize="40dp" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnADD"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/black"
         android:text="Agregar al carrito"
         app:icon="@mipmap/carrito"
         app:iconTint="#000000"
-        android:background="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblmenos" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
