--- a/Android/app/src/main/res/layout/fragment_pedidos.xml
+++ b/Android/app/src/main/res/layout/fragment_pedidos.xml
@@ -6,10 +6,8 @@
     android:background="@color/white"
     tools:context=".ui.pedidos.PedidosFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/lvtpedidosrealiza"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:layout_height="match_parent" />
 </FrameLayout>
