--- a/Android/app/src/main/res/layout/fragment_slideshow.xml
+++ b/Android/app/src/main/res/layout/fragment_slideshow.xml
@@ -8,16 +8,25 @@
     tools:context=".ui.recomendaciones.RecomendacionesF">
 
     <TextView
-        android:id="@+id/text_slideshow"
+        android:id="@+id/lblrecomenda"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="20dp"
+        android:textColor="#000000"
+        android:paddingTop="5dp"
+        android:text="Juan Manuel\nEstas son tus recomendaciones del dia"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+        android:id="@+id/ltvrecomenda"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lblrecomenda" />
 </androidx.constraintlayout.widget.ConstraintLayout>
